<resources>
    <string name="app_name">TP2_INF8405</string>
    <string name="title_activity_maps">MapsActivity</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="device_list">Device list</string>
    <string name="email">email</string>
    <string name="please_entre_a_valid_email">Please entre a valid email</string>
    <string name="password">password</string>
    <string name="a_password_must_be_set">A password must be set</string>
    <string name="login">LOGIN</string>
    <string name="incorrect_login_credentials">Incorrect login credentials</string>
    <string name="need_an_account">Need an account?</string>
    <string name="sign_up">SIGN UP</string>
    <string name="login2">Login</string>
    <string name="device_info">Device info</string>
    <string name="share">Share</string>
    <string name="add_to_nfavorites">Add to\nfavorites</string>
    <string name="directions">Directions</string>
    <string name="n_register_an_account">\n Register An Account</string>
    <string name="name">Name</string>
    <string name="a_name_must_be_set">A name must be set</string>
    <string name="email2">Email</string>
    <string name="please_enter_a_valid_email">Please enter a valid email</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in">LOG IN</string>
    <string name="change_profile_picture">Change profile picture</string>
    <string name="themes">Themes</string>
    <string name="favorites">Favorites</string>
    <string name="language">Language</string>
    <string name="language_choice">Choose Language…</string>
    <string name="language_en">English</string>
    <string name="language_fr">French</string>
    <string name="created_by_n_frank_aristide_n_laurent_bolduc_n_matthew_paoli_n_philippe_savard">Created by: \n - Frank Aristide \n - Laurent Bolduc \n - Matthew Paoli \n - Philippe Savard</string>
</resources>