<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.TP2_INF8405"
    android:backgroundTintMode="src_atop"
    >

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_h"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.9002433"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/login2"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/div_title_login"
        app:layout_constraintEnd_toEndOf="@id/guide_v2"
        app:layout_constraintStart_toStartOf="@+id/guide_v"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/div_title_login"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="@id/guide_v2"
        app:layout_constraintStart_toStartOf="@id/guide_v"
        app:layout_constraintTop_toBottomOf="@id/textView4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_v2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="101dp"
        android:layout_marginBottom="411dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintGuide_percent="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_v"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="101dp"
        android:layout_marginBottom="411dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintGuide_percent="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/layout_login_info"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/guide_h"
        app:layout_constraintEnd_toStartOf="@+id/guide_v2"
        app:layout_constraintStart_toStartOf="@+id/guide_v"
        app:layout_constraintTop_toBottomOf="@id/div_title_login">

        <EditText
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".25"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.286" />

        <TextView
            android:id="@+id/incorrect_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/please_entre_a_valid_email"
            android:textColor="#FF0000" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".08" />


        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".25"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/incorrect_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/a_password_must_be_set"
            android:textColor="#FF0000" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".08" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".28"
            android:onClick="on_login_button_click"
            android:text="@string/login" />

        <TextView
            android:id="@+id/incorrect_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/incorrect_login_credentials"
            android:textColor="#FF0000" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".08" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.39">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.4"
                android:text="@string/need_an_account"
                android:textColor="#B6B6B6"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/messageSignUp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:onClick="on_sign_up_click"
                android:text="@string/sign_up"
                android:textColor="#1E88E5" />
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>

